fixed nav manu collaps and expand issue

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -89,6 +89,13 @@
   }
 }
 
+@media (max-width: 992px) {
+  .navbar-toggler:hover {
+    background-color: transparent !important;
+    /* color: white !important; */
+  }
+}
+
 /*** Icon ***/
 .icon {
   padding: 15px;
