--- a/src/pages/Auth/styles.module.css
+++ b/src/pages/Auth/styles.module.css
@@ -70,7 +70,7 @@ input[type="checkbox"] {
 .show_passwd {
   position: absolute;
   top: 50%;
-  right: 1rem;
+  right: -0.3rem;
   transform: translateY(-50%);
   cursor: pointer;
   width: 2rem;
@@ -210,12 +210,17 @@ figure {
 }
 
 .input_group {
+  position: relative;
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 8px;
   position: relative;
   border-bottom: 2px solid #ccc;
+}
+
+.form_control {
+  margin-bottom: 20px;
 }
 
 .signin_form {
@@ -264,6 +269,7 @@ figure {
 @media screen and (max-width: 768px) {
   .signup_content,
   .signin_content {
+    padding: 80px 0;
     flex-direction: column;
     -moz-flex-direction: column;
     -webkit-flex-direction: column;
